@@ -33,6 +33,7 @@ dependencies {
     testCompile 'ch.qos.logback:logback-classic:1.3+'
     testCompile 'org.junit.jupiter:junit-jupiter-api:5.1.0'
     testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.1.0'
+    testRuntime 'org.junit.jupiter:junit-jupiter-params:5.1.0'
 
     shadow 'org.bouncycastle:bcprov-jdk15on:1.59'
 
@@ -57,6 +58,19 @@ jar {
 run {
     if (project.hasProperty("appArgs")) {
         args Eval.me(appArgs)
+    }
+}
+
+compileTestJava {
+    //inputs.property("moduleName", moduleName)
+    doFirst {
+        options.compilerArgs = [
+            //'--module-path', classpath.asPath, 
+            '--add-modules', 'junit',  
+            '--add-reads', "gov.gsa.pivconformancetest=junit", 
+            '--patch-module', "gov.gsa.pivconformancetest=" + files(sourceSets.test.java.srcDirs).asPath, 
+        ]
+        classpath = files()
     }
 }
 
